--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -36,6 +36,7 @@
  .socialMedia{
     display: flex;
     align-items: center;
+    column-gap: 10px;
  }
  .bottomFooter{
     display:flex;
@@ -113,13 +114,16 @@ row-gap: 15px;
 }
 
 
-
+.downArrow{
+    display: none;
+}
 
 @media screen and (max-width: 900px) {
    
 }
 
 @media screen and (max-width: 750px) {
+
     .footer{
         padding: 0%;
         padding-top: 10px;
@@ -181,6 +185,14 @@ row-gap: 15px;
         width: 100%;
         padding: 19px 0px;
 
+    }
+    .headingText{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+    .downArrow{
+        display: block;
     }
     .bottomFooter-thirdOne{
         width: 100%;
